--- a/index.html
+++ b/index.html
@@ -10,22 +10,25 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 2/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 2 points<br>
+Unlocked 3/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 3 points<br>
 <ul>
+<li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-     16 symbolic-ref
-     16 rev-parse
-     16 ls-files
+     25 symbolic-ref
+     25 rev-parse
+     25 ls-files
       6 achievements
       1 status
       1 init
       1 help
+      1 fetch
       1 config
       1 commit
+      1 branch
       1 add
 </pre>
 <script type="text/javascript">
@@ -57,7 +60,6 @@ There are 51 Achievements. Some achievements can be leveled up depending on the 
 <li><div class="title">Delivery Boy</div><div class="info">Move objects and refs by archive with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bundle.html">git-bundle</a>.</div></li>
 <li><div class="title">Dentist</div><div class="info">Extracted patches using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a> -p.</div></li>
 <li><div class="title">Fisherman</div><div class="info">Look for specified patterns in the current repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-grep.html">git-grep</a>.</div></li>
-<li><div class="title">Garage Inventor</div><div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Gardner</div><div class="info">Shows the commit ancestry graph with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show-branch.html">git-show-branch</a></div></li>
 <li><div class="title">Gipsy</div><div class="info">Create, list, delete a tag signed with GPG using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-tag.html">git-tag</a></div></li>
 <li><div class="title">Goldsmith</div><div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
