--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 8/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 15 points<br>
+Unlocked 8/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 18 points<br>
 <ul>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
+<li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 1)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Carpenter (Level 1)</div>  <div class="info">Custom <a href="http://www.kernel.org/pub/software/scm/git/docs/githooks.html">git-hooks</a> are installed which help catch issues before they are shared.</div></li>
 <li><div class="title">Apprentice Stone Mason (Level 1)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
@@ -24,20 +25,20 @@ Unlocked 8/51 <a href="http://github.com/icefox/git-achievements">Git Achievemen
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-    188 rev-parse
-    184 symbolic-ref
-    184 ls-files
+    452 rev-parse
+    435 symbolic-ref
+    435 ls-files
+     29 status
      14 achievements
-     13 status
-      8 checkout
-      4 branch
-      3 help
+     13 checkout
+      5 branch
+      4 help
+      4 commit
+      4 add
       3 config
-      3 add
-      2 commit
+      2 pull
       1 submodule
       1 reset
-      1 pull
       1 log
       1 init
       1 format-patch
