--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 31/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 42 points<br>
+Unlocked 31/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 43 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
+<li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Archivist (Level 1)</div>  <div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -57,33 +58,34 @@ Unlocked 31/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   1109 rev-parse
-   1084 symbolic-ref
-   1082 ls-files
-     50 status
-     36 checkout
-     21 log
+   1231 rev-parse
+   1204 symbolic-ref
+   1202 ls-files
+     51 status
+     39 checkout
+     23 pull
+     22 log
+     21 branch
      19 tag
-     18 pull
-     15 branch
      14 achievements
      12 commit
      12 add
      10 help
+      7 push
       7 config
-      6 push
       4 show
       4 merge
+      4 init
       4 diff
       3 reset
-      3 init
+      3 fetch
       2 whatchanged
+      2 Wed
       2 submodule
       2 stash
       2 rebase
       2 gc
       2 format-patch
-      2 fetch
       2 blame
       1 grep
       1 clone
