New achievement Socialite (Level 5)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 32/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 66 points<br>
+Unlocked 32/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 67 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -74,6 +74,7 @@ Unlocked 32/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Master Locksmith (Level -inf)</div>  <div class="info">Add Signed-off-by line at the end of the commit log message using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> -s.</div></li>
 <li><div class="title">Miller (Level 4)</div>  <div class="info">Add only part of a file to the stage 62 times with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a> -p.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Stone Mason (Level 4)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Stone Mason (Level 5)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Stone Mason (Level 6)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
@@ -81,24 +82,24 @@ Unlocked 32/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   3887 rev-parse
-   3821 symbolic-ref
-   3819 ls-files
-    321 status
-    108 checkout
-     88 pull
-     75 log
-     67 add
-     56 commit
-     43 diff
-     41 branch
+   3944 rev-parse
+   3877 symbolic-ref
+   3875 ls-files
+    329 status
+    113 checkout
+     90 pull
+     77 log
+     68 add
+     57 commit
+     45 diff
+     44 branch
+     30 push
      28 tag
-     28 push
-     27 help
+     28 help
      18 achievements
      17 show
      16 fetch
-     11 merge
+     12 merge
      10 reset
       8 config
       7 submodule
