New achievement Banker (Level 4)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 32/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 69 points<br>
+Unlocked 32/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 70 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -60,6 +60,7 @@ Unlocked 32/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Apprentice Web Designer (Level 3)</div>  <div class="info">Instantly browse your working repository in gitweb with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-instaweb.html">git-instaweb</a></div></li>
 <li><div class="title">Author (Level 4)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Author (Level 5)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
+<li><div class="title">Banker (Level 4)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Baptised</div>  <div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Blacksmith (Level 4)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
@@ -84,32 +85,33 @@ Unlocked 32/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   4344 rev-parse
-   4275 ls-files
-   4245 symbolic-ref
-    344 status
-    134 checkout
-    109 pull
-     80 log
-     68 add
-     58 commit
-     50 branch
-     46 diff
-     35 push
-     33 help
-     28 tag
+   5077 rev-parse
+   5000 ls-files
+   4949 symbolic-ref
+    372 status
+    152 checkout
+    128 pull
+     85 log
+     73 add
+     63 commit
+     52 diff
+     52 branch
+     39 push
+     37 help
+     29 tag
      20 achievements
-     18 fetch
+     19 fetch
      17 show
-     14 merge
-     11 reset
+     16 merge
+     12 reset
+      8 instaweb
       8 config
+      8 clean
       7 submodule
-      7 instaweb
-      7 clean
-      5 stash
+      7 stash
       5 init
       5 clone
+      4 Wed
       4 --version
       4 gc
       3 whatchanged
@@ -117,14 +119,13 @@ Git commands sorted by usage:
       3 mv
       3 ls-remote
       3 format-patch
-      2 Wed
       2 web--browse
       2 Thu
       2 blame
+      2 apply
       1 rm
       1 grep
       1 cherry-pick
-      1 apply
 </pre>
 <script type="text/javascript">
 function showLocked() {
