New achievement Apprentice Seamstress (Level 2)

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Steve Nolte's Git Achievements <img src='http://www.gravatar.com/avatar/e06c431b5e29b38d978f67dd0c46c59d'/></h2>
-Unlocked 32/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 75 points<br>
+Unlocked 32/51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 76 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -53,6 +53,7 @@ Unlocked 32/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 <li><div class="title">Apprentice Product Manager (Level 2)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Apprentice Product Manager (Level 3)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Apprentice Seamstress (Level 1)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
+<li><div class="title">Apprentice Seamstress (Level 2)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Apprentice Socialite (Level 1)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Socialite (Level 2)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Apprentice Socialite (Level 3)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -90,33 +91,33 @@ Unlocked 32/51 <a href="http://github.com/icefox/git-achievements">Git Achieveme
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-   6882 rev-parse
-   6764 ls-files
-   6748 symbolic-ref
-    451 status
-    237 checkout
-    192 pull
-    114 log
-     97 branch
-     88 add
-     80 commit
-     62 push
-     58 diff
-     47 help
+   7250 rev-parse
+   7135 ls-files
+   7115 symbolic-ref
+    493 status
+    251 checkout
+    203 pull
+    116 log
+    106 branch
+     97 add
+     88 commit
+     64 push
+     61 diff
+     51 help
+     42 reset
      40 tag
-     37 reset
+     28 show
      28 merge
-     27 show
-     26 fetch
+     27 stash
+     27 fetch
      20 achievements
      17 revert
-      8 stash
+     13 clean
       8 instaweb
       8 config
-      8 clean
       7 submodule
+      6 clone
       5 init
-      5 clone
       4 Wed
       4 --version
       4 gc
@@ -127,11 +128,11 @@ Git commands sorted by usage:
       3 ls-remote
       3 format-patch
       2 web--browse
+      2 cherry-pick
       2 blame
       2 apply
       1 rm
       1 grep
-      1 cherry-pick
 </pre>
 <script type="text/javascript">
 function showLocked() {
